# ergo-layouts

./: .gitignore  Directory.Build.targets  ergo-layouts.sln  readme.md
ConsoleApp1/: ConsoleApp1.fsproj  Program.fs
configs/: qwerty.json  settings.json
docs/: 0.05-264.result.txt  0.05-351.result.txt  0.05-800.result.txt  0.1-100.result.txt  0.1-101.result.txt  Book1.xlsx  bigger-statistics.md  layouts-good.md  layouts.md  layouts.v1.xlsx  layouts.v2.xlsx  layouts.xlsx  layouts.zxcv.xlsx  patorjk-v12.json  patorjk.json  resonimg.md  results.csv  results.md  results.xlsx  statictics.md  statistics.json  statistics.md  todo.md
layouts/: QWERF.json  arensito customized.json  asset.json  breakl15.json  c-qwerty 1-2.json  c-qwerty n.json  c-qwerty.json  capewell 9.3.json  capewell v2.json  capewell-dvorak.json  niro.json  (+34 more)
layouts-bad/: collemak.json  dvorak.json  soul.json
layouts-ex/: arensito.json  asset.json  breakl15.json  c-querty 1-2.json  c-querty.json  collemak.json  dvorak.json  kaehi.json  mtgap v1.json  mtgap v2.json  my v2.json  niro.json  norman lr.json  qfmlwy.json  qgmlwb.json  qgmlwy.json  qwerty.json  tnwmlc.json  workman.json
layouts-good/: arensito.json  capewell.json  mtgap v2.json  my v10.json  my v12.json  my v4.json  my v5.1.json  my v7.json  my v9.json
src/edBalance/: Cargo.toml
src/edBalance/data/: digraphs.json  result.xlsx  results.md  sample.json5
src/edBalance/scripts/: run.sh
src/edBalance/src/: cli.rs  lib.rs  main.rs  models.rs
src/edBalance/src/models/: digraphs.rs  group.rs  mod.rs  shared.rs
src/edBalance/tests/: mods.rs
(+64 files in other folders)
