[package]
name = "ed_balance"
version = "0.1.0"
authors = ["s. galiamov <sgalyamov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
