[package]
authors = ["s. galiamov <sgalyamov@gmail.com>"]
edition = "2018"
name = "ed_balance"
version = "0.1.0"

[dependencies]
itertools = "0.9.0"
num_cpus = "1.13.0"
rand = "0.7.3"
rayon = "1.5.0"
scoped_threadpool = "0.1.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
structopt = "0.3.20"
