[package]
authors = ["s. galiamov <sgalyamov@gmail.com>"]
edition = "2018"
name = "ed_balance"
version = "0.1.0"

[dependencies]
chrono = "0.4"
indicatif = "0.15.0"
itertools = "0.9.0"
rand = "0.7.3"
rayon = "1.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
structopt = "0.3.20"
